--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "firebase": "^7.21.1",
     "luxon": "^1.25.0",
     "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-modal": "^3.11.2",
     "react-scripts": "3.4.3",
     "uuid": "^8.3.0"
   },
