--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.21.1",
     "luxon": "^1.25.0",
+    "marked": "^1.2.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
